--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
 @import "reset.css";
 
 body {
+  background-color: #f6f9fc;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgb(255, 255, 255);
+  padding: 50px 0px;
 }
 
 .canvas {
@@ -12,14 +15,15 @@ body {
   width: 400px;
   height: 400px;
   background-color: white;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 15px;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
 
 .contorls {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 30px;
+  margin-top: 30px;
 }
 
 .brush {
@@ -47,8 +51,11 @@ body {
   background-color: black;
 }
 
-.control__btn {
-  all: unset;
+.control__colors {
+  display: flex;
+}
+.control__color {
+  /* display: flex; */
   width: 30px;
   height: 30px;
   border-radius: 15px;
